--- a/conf/db.conf.in
+++ b/conf/db.conf.in
@@ -21,15 +21,19 @@ source def_queryable_features : def_pqsql
     sql_attr_float = lat
     sql_attr_float = lon
     sql_field_string = geom_quadindex
-    sql_attr_string = label_de
-    sql_attr_string = label_fr
-    sql_attr_string = label_it
-    sql_attr_string = label_en
 }
 
 source def_queryable_features_with_year : def_queryable_features
 {
     sql_attr_uint = year
+}
+
+source def_queryable_features_translated : def_queryable_features
+{
+    sql_attr_string = label_de
+    sql_attr_string = label_fr
+    sql_attr_string = label_it
+    sql_attr_string = label_en
 }
 
 ## SEARCHABLE FEATURES SOURCE
